--- a/init-eshop-app/index.html
+++ b/init-eshop-app/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Application eshop Angular</title>
+        <title>SCEP 2018</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <base href="/" />
-        
 
+        <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="assets/css/style.css" />
     </head>
 
 
